--- a/samples/Asteroids/Asteroids_2013.vcxproj
+++ b/samples/Asteroids/Asteroids_2013.vcxproj
@@ -207,6 +207,11 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</DeploymentContent>
       <Link>%(OutputDir)%(FileName)%(Extension)</Link>
     </None>
+    <None Include="dlls\Win32\d3dcompiler_47.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
+      <Link>%(OutputDir)%(FileName)%(Extension)</Link>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="SimplePixelShader.hlsl">
