updated projects for d3dcompiler dlls for win32 and arm. Added Rotating Cube to samples

--- a/samples/RotatingCube/RotatingCube.vcxproj
+++ b/samples/RotatingCube/RotatingCube.vcxproj
@@ -140,12 +140,12 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="d3dcompiler\Win32\D3Dcompiler_46.dll">
+    <None Include="..\d3dcompiler\Win32\D3Dcompiler_46.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
       <Link>%(OutputDir)%(FileName)%(Extension)</Link>
     </None>
-    <None Include="d3dcompiler\ARM\D3Dcompiler_46.dll">
+    <None Include="..\dd3dcompiler\ARM\D3Dcompiler_46.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</DeploymentContent>
       <Link>%(OutputDir)%(FileName)%(Extension)</Link>
