--- a/samples/angle/Simple_Instancing/Simple_Instancing_winrt/Simple_Instancing_winrt.vcxproj
+++ b/samples/angle/Simple_Instancing/Simple_Instancing_winrt/Simple_Instancing_winrt.vcxproj
@@ -151,9 +151,15 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="d3dcompiler_46.dll">
+    <None Include="..\..\..\d3dcompiler\Win32\D3Dcompiler_46.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
+      <Link>%(OutputDir)%(FileName)%(Extension)</Link>
+    </None>
+    <None Include="..\..\..\d3dcompiler\ARM\D3Dcompiler_46.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</DeploymentContent>
+      <Link>%(OutputDir)%(FileName)%(Extension)</Link>
     </None>
     <None Include="Simple_Instancing_winrt_TemporaryKey.pfx" />
   </ItemGroup>
