fixed path to d3dcompiler dll for ARM builds

--- a/samples/RotatingCube/RotatingCube.vcxproj
+++ b/samples/RotatingCube/RotatingCube.vcxproj
@@ -145,7 +145,7 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
       <Link>%(OutputDir)%(FileName)%(Extension)</Link>
     </None>
-    <None Include="..\dd3dcompiler\ARM\D3Dcompiler_46.dll">
+    <None Include="..\d3dcompiler\ARM\D3Dcompiler_46.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</DeploymentContent>
       <Link>%(OutputDir)%(FileName)%(Extension)</Link>
