added ImageRangeCache files to VS2013 project

--- a/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
@@ -173,6 +173,9 @@
     <ClCompile Include="..\common\winrt\ThreadEmulation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="renderer\IndexRangeCache.cpp">
+      <Filter>Source Files\Renderer11</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryStream.h">
@@ -396,6 +399,9 @@
     </ClInclude>
     <ClInclude Include="..\common\winrt\threadutils.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer\IndexRangeCache.h">
+      <Filter>Header Files\Renderer11</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
