--- a/src/libGLESv2/libGLESv2_winrt_2013.vcxproj
+++ b/src/libGLESv2/libGLESv2_winrt_2013.vcxproj
@@ -308,6 +308,7 @@
     <ClCompile Include="renderer\IndexBuffer11.cpp" />
     <ClCompile Include="renderer\IndexDataManager.cpp" />
     <ClCompile Include="renderer\Image11.cpp" />
+    <ClCompile Include="renderer\IndexRangeCache.cpp" />
     <ClCompile Include="renderer\InputLayoutCache.cpp" />
     <ClCompile Include="renderer\Query11.cpp" />
     <ClCompile Include="renderer\Renderer.cpp" />
@@ -363,6 +364,7 @@
     <ClInclude Include="renderer\IndexBuffer.h" />
     <ClInclude Include="renderer\IndexBuffer11.h" />
     <ClInclude Include="renderer\IndexDataManager.h" />
+    <ClInclude Include="renderer\IndexRangeCache.h" />
     <ClInclude Include="renderer\InputLayoutCache.h" />
     <ClInclude Include="renderer\Query11.h" />
     <ClInclude Include="renderer\QueryImpl.h" />
