--- a/samples/angle/Simple_Instancing/Simple_Instancing_winrt/Simple_Instancing_winrt.vcxproj.filters
+++ b/samples/angle/Simple_Instancing/Simple_Instancing_winrt/Simple_Instancing_winrt.vcxproj.filters
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Simple_Instancing_winrt_TemporaryKey.pfx" />
-    <None Include="d3dcompiler_46.dll" />
+    <None Include="..\..\..\d3dcompiler\Win32\D3Dcompiler_46.dll" />
+    <None Include="..\..\..\d3dcompiler\ARM\D3Dcompiler_46.dll" />
   </ItemGroup>
 </Project>
